--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -21,4 +21,6 @@ include::breaking-changes.asciidoc[]
 
 include::community.asciidoc[]
 
+include::release-notes.asciidoc[]
+
 include::redirects.asciidoc[]
