--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -17,4 +17,6 @@ include::build/classes.asciidoc[]
 
 include::helpers.asciidoc[]
 
+include::release-notes.asciidoc[]
+
 include::redirects.asciidoc[]
