--- a/docs/http-meta-data.asciidoc
+++ b/docs/http-meta-data.asciidoc
@@ -13,7 +13,7 @@ The client sends a `x-elastic-client-meta` header by default.
 This header is used to collect meta data about the versions of the components
 used by the client. For instance, a value of `x-elastic-client-meta` can be
 `es=7.14.0-s,php=7.4.11,t=7.14.0-s,a=0,cu=7.68.0`, where each value is the
-version of `es=Elasticsearch`, `t` is the tranport version (same of client),
+version of `es=Elasticsearch`, `t` is the transport version (same of client),
 `a` is asyncronouts (`0=false` by default) and `cu=cURL`.
 
 If you would like to disable it you can use the `setElasticMetaHeader()`
@@ -68,7 +68,6 @@ In PHP you can set this environment variable as follows:
 ----
 putenv("ELASTIC_CLIENT_APIVERSIONING=true");
 ----
-
 
 
 
