--- a/docs/http-meta-data.asciidoc
+++ b/docs/http-meta-data.asciidoc
@@ -54,7 +54,7 @@ Content-Type: application/vnd.elasticsearch+json; compatible-with=7
 Accept: application/vnd.elasticsearch+json; compatible-with=7
 ----
 
-which signals to Elasticsearch that the client is requesting 7.x version of request and response
+which signals to {es} that the client is requesting 7.x version of request and response
 bodies. This allows forupgrading from 7.x to 8.x version of Elasticsearch without upgrading
 everything at once. Elasticsearch should be upgraded first after the compatibility header is
 configured and clients should be upgraded second.
@@ -68,6 +68,5 @@ In PHP you can set this environment variable as follows:
 ----
 putenv("ELASTIC_CLIENT_APIVERSIONING=true");
 ----
-
 
 
