fix(client-from-config): renamed the includePortInHostHeader to start with 'set' prefix

--- a/docs/http-meta-data.asciidoc
+++ b/docs/http-meta-data.asciidoc
@@ -39,7 +39,7 @@ as follows:
 [source,php]
 ----
 $client = Elasticsearch\ClientBuilder::create()
-    ->includePortInHostHeader(true)
+    ->setIncludePortInHostHeader(true)
     ->build();
 ----
 
